--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.52.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,8 +38,10 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "sass": "^1.52.2"
+  }
 }
